--- a/PopArTech02/assets/css/style.css
+++ b/PopArTech02/assets/css/style.css
@@ -409,9 +409,9 @@
 	}
 
 	input[type="text"],
-	input[type="password"],
+	input[type="message"],
 	input[type="email"],
-	input[type="tel"],
+	input[type="image"],
 	select,
 	textarea {
 		-moz-appearance: none;
@@ -431,18 +431,18 @@
 	}
 
 		input[type="text"]:invalid,
-		input[type="password"]:invalid,
+		input[type="message"]:invalid,
 		input[type="email"]:invalid,
-		input[type="tel"]:invalid,
+		input[type="image"]:invalid,
 		select:invalid,
 		textarea:invalid {
 			box-shadow: none;
 		}
 
 		input[type="text"]:focus,
-		input[type="password"]:focus,
+		input[type="message"]:focus,
 		input[type="email"]:focus,
-		input[type="tel"]:focus,
+		input[type="image"]:focus,
 		select:focus,
 		textarea:focus {
 			border-color: #4bae77;
@@ -450,7 +450,7 @@
 		}
 
 	input[type="text"],
-	input[type="password"],
+	input[type="message"],
 	input[type="email"],
 	select {
 		height: 2.75em;
@@ -1043,33 +1043,6 @@
 		display: block;
 	  }
 
-
-/*Cosplay et Jeux Video*/
-
-
-
-	.categorie-col {
-		column-count: 2;
-		margin-top: 6em;
-		}
-	.categorie-col h1{
-
-		text-align: center;
-		font-size: 2em;
-		color: #000;
-	}
-	.categorie-col h3{
-		margin-left: 3.5em;
-		color: #000;
-	}
-	.categorie-col p{
-		color: #000;
-		margin: 0 2.5em 5em;
-	}
-
-
-
-
 /* Footer */
 
 	#footer {
@@ -1096,14 +1069,15 @@
 			padding: 0;
 		}
 
-			#footer .copyright a {
-				color: rgba(255, 255, 255, 0.5);
-				text-decoration: none;
-			}
+		#footer .copyright a {
+			color: rgba(255, 255, 255, 0.5);
+			text-decoration: none;
+		}
 
-				#footer .copyright a:hover {
-					color: #FFF;
-				}
+		#footer .copyright a:hover {
+			color: #FFF;
+		}
+
 
 		@media screen and (max-width: 980px) {
 
