--- a/PopArTech02/assets/css/style.css
+++ b/PopArTech02/assets/css/style.css
@@ -52,6 +52,79 @@
 		-webkit-text-size-adjust: none;
 	}
 
+	.alert {
+		--bs-alert-bg: transparent;
+		--bs-alert-padding-x: 1rem;
+		--bs-alert-padding-y: 1rem;
+		--bs-alert-margin-bottom: 1rem;
+		--bs-alert-color: inherit;
+		--bs-alert-border-color: transparent;
+		--bs-alert-border: 1px solid var(--bs-alert-border-color);
+		--bs-alert-border-radius: 0.375rem;
+		position: absolute;
+		padding: var(--bs-alert-padding-y) var(--bs-alert-padding-x);
+		margin-bottom: var(--bs-alert-margin-bottom);
+		color: var(--bs-alert-color);
+		background-color: var(--bs-alert-bg);
+		border: var(--bs-alert-border);
+		border-radius: var(--bs-alert-border-radius);
+		z-index: 9999;
+	  }
+
+	  .alert-success {
+		--bs-alert-color: #0f5132;
+		--bs-alert-bg: #d1e7dd;
+		--bs-alert-border-color: #badbcc;
+	  }
+	  .alert-success .alert-link {
+		color: #0c4128;
+	  }
+
+	  .alert-info {
+		--bs-alert-color: #055160;
+		--bs-alert-bg: #cff4fc;
+		--bs-alert-border-color: #b6effb;
+	  }
+	  .alert-info .alert-link {
+		color: #04414d;
+	  }
+
+	  .alert-warning {
+		--bs-alert-color: #664d03;
+		--bs-alert-bg: #fff3cd;
+		--bs-alert-border-color: #ffecb5;
+	  }
+	  .alert-warning .alert-link {
+		color: #523e02;
+	  }
+
+	  .alert-danger {
+		--bs-alert-color: #842029;
+		--bs-alert-bg: #f8d7da;
+		--bs-alert-border-color: #f5c2c7;
+	  }
+	  .alert-danger .alert-link {
+		color: #6a1a21;
+	  }
+
+	  .alert-light {
+		--bs-alert-color: #636464;
+		--bs-alert-bg: #fefefe;
+		--bs-alert-border-color: #fdfdfe;
+	  }
+	  .alert-light .alert-link {
+		color: #4f5050;
+	  }
+
+	  .alert-dark {
+		--bs-alert-color: #141619;
+		--bs-alert-bg: #d3d3d4;
+		--bs-alert-border-color: #bcbebf;
+	  }
+	  .alert-dark .alert-link {
+		color: #101214;
+	  }
+
 /* Box Model */
 
 	*, *:before, *:after {
@@ -1056,6 +1129,10 @@
 			text-align: left;
 			color: #FFF;
 		}
+		#footer strong{
+			color: red;
+		}
+
 
 		#footer .copyright {
 			color: rgba(255, 255, 255, 0.5);
@@ -1089,6 +1166,3 @@
 			}
 
 		}
-
-
-
