--- a/PopArTech02/assets/css/style.css
+++ b/PopArTech02/assets/css/style.css
@@ -338,9 +338,30 @@
 		text-align: right;
 	}
 
+	.inner-acticle {
+		margin-top: 4em;
+	}
+
+
+
+	.inner-categorie{
+		margin-top: 4em;
+		background: #6cc091;
+		padding: 2em 0;
+		color: #fff;
+	}
+	.inner-categorie h2{
+		color: #fff;
+	}
+
+
+
+
+
 	.inner {
 		max-width: 80em;     /*taille du bootstrap*/
-		margin: 0 auto; /*mettre une mmargin au centre*/
+		margin: 4em auto; /*mettre une mmargin au centre*/
+		/*margin-bottom: 1em;*/
 	}
 
 
@@ -355,7 +376,7 @@
 		@media screen and (max-width: 480px) {
 
 			.inner {
-				max-width: 90%;
+				max-width: 80%;
 			}
 
 		}
@@ -1109,12 +1130,13 @@
 
 	.profile:target {
 		display: block;
+		overflow: hidden;
 	  }
 
 /* Footer */
 
 	#footer {
-		padding: 6em 0;
+		padding: 1em 0;
 		background: #6cc091;
 		color: #fff;
 		text-align: center;
